Delete close comment

--- a/one/maxi/index.html
+++ b/one/maxi/index.html
@@ -789,7 +789,7 @@
                                 class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--bg-lemon-yellow"></span>
                             <div
                                 class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop">
-                                <span class="ws10-c-price__amount">74,99</span> -->
+                                <span class="ws10-c-price__amount">74,99</span>
                                 <span class="ws10-c-price__currency">€</span>
                                 <sub class="ws10-c-price__recurrence">/mes</sub>
                             </div>
