--- a/one/maxi/index.html
+++ b/one/maxi/index.html
@@ -769,14 +769,12 @@
                     <p>Impuestos y cuota de línea incluidos.</p>
                     <p><strong>Permanencia 1 año</strong></p>
                     <p>¿Cuánto voy a pagar?</p>
-                    <p><strong>Paquete Móvil + Fibra: 37,49€/mes durante 3 meses,
-                        después <span>74,99€/mes</span></strong>
+                    <p><strong>Paquete Móvil + Fibra: 37,49€/mes durante 3 meses, después <span>74,99€/mes</span></strong>
                     </p>
                     <p class="ws10-flex ws10-flex__direction--column">
                         <span>Otras promociones:</span>
                         <span>Llévate el paquete de Fibra + Móvil al 50% dto. 3 meses.</span>
-                        <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año, después con un 50% dto.
-                            por solo 9,99€/mes (dto. ya aplicado).</span>
+                        <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año, después con un 50% dto. por solo 9,99€/mes (dto. ya aplicado).</span>
                         <span>Paquete de TV: GRATIS durante 1 año, después 10€/mes.</span>
                     </p>
                 
