--- a/colectivos/ilimitada_avanzada_600/index.html
+++ b/colectivos/ilimitada_avanzada_600/index.html
@@ -32,12 +32,11 @@
         >
           <span class="ws10-u-heading--4">
               Fibra + Móvil
-            <strong>con 50% dto. 3 meses +<br />
-              después 15% dto. 2 años</strong></span>
+              <strong>con 50% dto. 3 meses +<br />con 50% dto. 3 meses +</strong>
+          </span>
           <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
               Fibra y datos para ser ilimitable
           </h2>
-  
           <a
             class="ws10-c-link-chevron ws10-c-link-chevron--primary"
             target="_blank"
@@ -68,7 +67,7 @@
         >
           <div class="vf-ticket__floating">
             <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">
-              Vodafone One Ilimitada Avanzada 300Mbps
+              Vodafone One Ilimitada Avanzada 600Mbps
             </h2>
             <section
               class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow"
