Colectivos Avanzada 600 little fixes

--- a/colectivos/ilimitada_avanzada_600/index.html
+++ b/colectivos/ilimitada_avanzada_600/index.html
@@ -320,7 +320,7 @@
             Móvil
           </p>
           <p class="ws10-u-heading--3">
-            Datos ilimitados para que no te pierdas nada
+            Datos ilimitados para no perderte nada
           </p>
           <div class="vf-mobile__animation">
             <div class="vf-mobile__apps ws10-u--mt+">
@@ -357,8 +357,8 @@
                 <use class="icon-v3" xlink:href="#icon-thunder-2grey"></use>
               </svg>
               <p class="ws10-c-product-detail__text">
-                <strong>Datos ilimitados</strong>
-                a alta velocidad (10Mbps de bajada y de subida).
+                Datos ilimitados
+                <strong>a alta velocidad (10Mbps de bajada y de subida).</strong>
               </p>
             </li>
             <li
@@ -567,7 +567,9 @@
                 </div>
                 <p class="ws10-c-product-detail__text">
                     <strong>600Mbps de fibra óptica simétrica</strong>
-                    para tu hogar, podrás conectar hasta 25 dispositivos a la vez.
+                    para tu hogar, podrás conectar hasta 
+                    <strong>25</strong>
+                     dispositivos a la vez.
                 </p>
               </div>
               <div
