Colectivos PLP new changes

--- a/colectivos/plp/index.html
+++ b/colectivos/plp/index.html
@@ -165,10 +165,10 @@
 		                      </svg>
 		                      <div class="ws10-c-card-rate__product">
 		                        <p class="ws10-c-card-rate__product-title">
-		                          4GB y 200 minutos GRATIS
+		                          Segunda línea GRATIS 1 año
 		                        </p>
 		                        <p class="ws10-c-card-rate__product-txt">
-		                          segunda línea GRATIS 1 año
+		                          Datos y minutos ilimitados
 		                        </p>
 		                      </div>
 		                    </li>
@@ -193,6 +193,23 @@
 		                              + llamadas ilimitadas en fijo
 		                            </p>
 		                        </div>
+		                      </div>
+		                    </li>
+		                    <li class="ws10-c-card-rate__product-info-item">
+		                      <svg
+		                        class="ws10-c-card-rate__product-icon ws10-u-color--black"
+		                        xmlns="http://www.w3.org/2000/svg"
+		                        xmlns:xlink="http://www.w3.org/1999/xlink"
+		                      >
+		                        <use xlink:href="#icon-tv"></use>
+		                      </svg>
+		                      <div class="ws10-c-card-rate__product">
+		                        <p class="ws10-c-card-rate__product-title">
+		                          Pack TV Universal GRATIS
+		                        </p>
+		                        <p class="ws10-c-card-rate__product-txt">
+		                          con más de 30 canales internacionales
+		                        </p>
 		                      </div>
 		                    </li>
 		                  </ul>
@@ -287,10 +304,10 @@
 		                      </svg>
 		                      <div class="ws10-c-card-rate__product">
 		                        <p class="ws10-c-card-rate__product-title">
-		                          4GB y 200 minutos GRATIS
+		                          Segunda línea GRATIS 1 año
 		                        </p>
 		                        <p class="ws10-c-card-rate__product-txt">
-		                          segunda línea GRATIS 1 año
+		                          Datos y minutos ilimitados
 		                        </p>
 		                      </div>
 		                    </li>
@@ -315,6 +332,23 @@
 		                              + llamadas ilimitadas en fijo
 		                            </p>
 		                        </div>
+		                      </div>
+		                    </li>
+		                    <li class="ws10-c-card-rate__product-info-item">
+		                      <svg
+		                        class="ws10-c-card-rate__product-icon ws10-u-color--black"
+		                        xmlns="http://www.w3.org/2000/svg"
+		                        xmlns:xlink="http://www.w3.org/1999/xlink"
+		                      >
+		                        <use xlink:href="#icon-tv"></use>
+		                      </svg>
+		                      <div class="ws10-c-card-rate__product">
+		                        <p class="ws10-c-card-rate__product-title">
+		                          Pack TV Universal GRATIS
+		                        </p>
+		                        <p class="ws10-c-card-rate__product-txt">
+		                          con más de 30 canales internacionales
+		                        </p>
 		                      </div>
 		                    </li>
 		                  </ul>
@@ -407,10 +441,10 @@
 		                      </svg>
 		                      <div class="ws10-c-card-rate__product">
 		                        <p class="ws10-c-card-rate__product-title">
-		                          4GB y 200 minutos GRATIS
+		                          Segunda línea GRATIS 1 año
 		                        </p>
 		                        <p class="ws10-c-card-rate__product-txt">
-		                          segunda línea GRATIS 1 año
+		                          Datos y minutos ilimitados
 		                        </p>
 		                      </div>
 		                    </li>
