Colectivos 300 / 600 fix header

--- a/colectivos/ilimitada_avanzada_300/index.html
+++ b/colectivos/ilimitada_avanzada_300/index.html
@@ -33,7 +33,7 @@
         >
           <span class="ws10-u-heading--4">
               Fibra + Móvil
-              <strong>con 50% dto. 3 meses +<br />con 50% dto. 3 meses +</strong>
+              <strong>con 50% dto. 3 meses +<br />después 15% dto. 2 años</strong>
           </span>
           <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
               Fibra y datos para ser ilimitable
