--- a/colectivos/ilimitada_avanzada_300/index.html
+++ b/colectivos/ilimitada_avanzada_300/index.html
@@ -33,7 +33,7 @@
         >
           <span class="ws10-u-heading--4">
               Fibra + Móvil
-              <strong>con 50% dto. 3 meses +<br />con 50% dto. 3 meses +</strong>
+              <strong>con 50% dto. 3 meses +<br />después 15% dto. 2 años</strong>
           </span>
           <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
               Fibra y datos para ser ilimitable
@@ -492,8 +492,8 @@
                 <use class="icon-v3" xlink:href="#icon-thunder-1grey"></use>
               </svg>
               <p class="ws10-c-product-detail__text">
-                  <strong>Datos ilimitados</strong>
-                   a media velocidad (2Mbps de bajada y de subida)
+                  Datos ilimitados
+                  <strong> a media velocidad (2Mbps de bajada y de subida)</strong>
               </p>
             </div>
             <div
@@ -868,7 +868,7 @@
               id="idList"
               style="left: 0; position:relative;"
             >
-            (*) Puedes añadir más pack de TV en el proceso de compra.
+            (*) Puedes añadir más packs de TV en el proceso de compra.
             </span>
           </div>
         </section>
@@ -1213,7 +1213,7 @@
                 </div>
                 <p class="ws10-c-product-detail__text">
                     <strong>300Mbps de fibra óptica simétrica</strong>
-                    para tu hogar, podrás conectar hasta 25 dispositivos a la vez.
+                    para tu hogar, podrás conectar hasta 12 dispositivos a la vez.
                 </p>
               </div>
               <div
@@ -1388,6 +1388,7 @@
             <span data-js-vf="_portability">
               Línea adicional: GRATIS durante 1 año, después con un 50% dto. por
               solo 17,50€/mes (dto. ya aplicado).</span>
+            <span>Paquete de TV: GRATIS</span>
           </p>
         
           <!----PRICE-TAB-->
