--- a/colectivos/ilimitada_avanzada_600/index.html
+++ b/colectivos/ilimitada_avanzada_600/index.html
@@ -32,7 +32,7 @@
         >
           <span class="ws10-u-heading--4">
               Fibra + Móvil
-              <strong>con 50% dto. 3 meses +<br />con 50% dto. 3 meses +</strong>
+              <strong>con 50% dto. 3 meses +<br />después 15% dto. 2 años</strong>
           </span>
           <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
               Fibra y datos para ser ilimitable
@@ -336,7 +336,7 @@
             Móvil
           </p>
           <p class="ws10-u-heading--3">
-            Datos ilimitados para no perderte nada
+            <strong>Datos ilimitados para no perderte nada</strong>
           </p>
           <div class="vf-mobile__animation">
             <div class="vf-mobile__apps ws10-u--mt+">
@@ -498,8 +498,8 @@
                 <use class="icon-v3" xlink:href="#icon-thunder-1grey"></use>
               </svg>
               <p class="ws10-c-product-detail__text">
-                  <strong>Datos ilimitados</strong>
-                   a media velocidad (2Mbps de bajada y de subida)
+                  Datos ilimitados
+                  <strong> a media velocidad (2Mbps de bajada y de subida)</strong>
               </p>
             </div>
             <div
@@ -1220,7 +1220,7 @@
                 <p class="ws10-c-product-detail__text">
                     <strong>600Mbps de fibra óptica simétrica</strong>
                     para tu hogar, podrás conectar hasta 
-                    <strong>25</strong>
+                    25
                      dispositivos a la vez.
                 </p>
               </div>
