pelenaca: shadow + scrollTitle Norte

--- a/Norte/ilimitada_avanzada_300/index.html
+++ b/Norte/ilimitada_avanzada_300/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=15e342f4bf614d9108b93431ec193713" rel="stylesheet">
-<link href="css/styles.css?v=8348ad1bad7f9b6d7dc0a7735617c3d5" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=35924e25c653439e1fa0ca937efbf676" rel="stylesheet">
+<link href="css/styles.css?v=ca99ae6bc4292374ad526ad270f8c74f" rel="stylesheet" data-ws10-microcss="">
 <script>
 
 utag_data.default_plan = "vodafone one ilimitada avanzada 300Mbps"
@@ -60,10 +60,10 @@ utag_data.plans_add2cart = [
                     <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--hidden-visually-until@tablet ws10-u--mt4x"><img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="img/banner/icono-bestprice.svg?v=a77db3201fa0fa6ac054745189afba72"><span>Mejor Precio Vodafone</span></span>
 
                 </div>
+                <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">Vodafone One Ilimitada Avanzada 300Mbps</h2>
                 <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
                     <div class="vf-ticket__floating">
-                        <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">Vodafone One Ilimitada Avanzada 300Mbps</h2>
-                        <section class="ws10-c-card ws10-c-card-rate" data-ws10-js="card-rate">
+                        <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                             <div class="ws10-c-card-rate__w-rates">
                                 <div class="ws10-c-card-rate__a-rate">
                                     <ul class="ws10-c-card-rate__product-info" data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año" data-vfes-seo-empathy-promoprice="28,49" data-vfes-seo-empathy-price="61,99">
@@ -1251,4 +1251,4 @@ utag_data.plans_add2cart = [
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=3a62887299433be6d8e3077faaea8eac"></script>
+<script src="js/main.js?v=5542d0eed8411e2bf45af431c9dcf7c2"></script>
