--- a/Norte/ilimitada_plus_600/index.html
+++ b/Norte/ilimitada_plus_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=9b962a527bc0987f604cb3c2b0dcc58f" rel="stylesheet">
-<link href="css/styles.css?v=2eb74346b94c7abd5584fc39967baa77" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=fbc9957d348edd06493b20f5889fea57" rel="stylesheet">
+<link href="css/styles.css?v=746f7250ee85a20d54e36630d495e818" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada plus 600Mbps"
 utag_data.plans_add2cart = [
@@ -66,10 +66,10 @@ utag_data.plans_add2cart = [
                     <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--hidden-visually-until@tablet ws10-u--mt4x"><img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="img/banner/icono-bestprice.svg?v=a77db3201fa0fa6ac054745189afba72"><span>Mejor Precio Vodafone</span></span>
 
                 </div>
+                <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">Vodafone One Ilimitada Plus 600Mbps</h2>
                 <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
                     <div class="vf-ticket__floating">
-                        <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">Vodafone One Ilimitada Plus 600Mbps</h2>
-                        <section class="ws10-c-card ws10-c-card-rate" data-ws10-js="card-rate">
+                        <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                             <div class="ws10-c-card-rate__w-rates">
                                 <div class="ws10-c-card-rate__a-rate">
                                     <ul class="ws10-c-card-rate__product-info" data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año" data-vfes-seo-empathy-promoprice="37,49" data-vfes-seo-empathy-price="74,99">
@@ -1126,4 +1126,4 @@ utag_data.plans_add2cart = [
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=98e3c6ad42cd0c74cae404155e009bc9"></script>
+<script src="js/main.js?v=3a0252994c7d2f0dad3fcaa346c53a2e"></script>
