--- a/Norte/ilimitada_avanzada_600/index.html
+++ b/Norte/ilimitada_avanzada_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=c556d52aff6ed6ea3e4d575f2066d400" rel="stylesheet">
-<link href="css/styles.css?v=f32ec1bc89df3c0236b77a2aa28736bc" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=d343adc31a885c02cb3310b67c1c4fbc" rel="stylesheet">
+<link href="css/styles.css?v=69f3f44709c1a3dacbd46b1745918f89" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada avanzada 600Mbps"
 utag_data.plans_add2cart = [
@@ -63,11 +63,10 @@ utag_data.plans_add2cart = [
               Precio Vodafone</span></span>
 
         </div>
+        <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">Vodafone One Ilimitada Avanzada 600Mbps</h2>
         <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
           <div class="vf-ticket__floating">
-            <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">Vodafone One
-              Ilimitada Avanzada 600Mbps</h2>
-            <section class="ws10-c-card ws10-c-card-rate" data-ws10-js="card-rate">
+            <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
               <div class="ws10-c-card-rate__w-rates">
                 <div class="ws10-c-card-rate__a-rate">
                   <ul class="ws10-c-card-rate__product-info" data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año" data-vfes-seo-empathy-promoprice="30,49" data-vfes-seo-empathy-price="61,99">
@@ -1225,4 +1224,4 @@ utag_data.plans_add2cart = [
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=9363cb5378b419859b845d786574fe33"></script>
+<script src="js/main.js?v=f54ebf1b6a52c3fc438fb1cecc2cfc1f"></script>
