Colectivos change images and fix mobile image

--- a/colectivos/ilimitada_avanzada_600/index.html
+++ b/colectivos/ilimitada_avanzada_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=5bb7239108479e08f3c546dc3dc99022" rel="stylesheet">
-<link href="css/styles.css?v=3e95cdc7c6894306056bd9e19b693022" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=881e67932d5e12186fc6be77d47a4ff4" rel="stylesheet">
+<link href="css/styles.css?v=d64d57adabbd574e4779ac32486504b4" rel="stylesheet" data-ws10-microcss="">
 
 <script>
   utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 600mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+600mbps fibra", "promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 600mb", "promotion_gift_name": "", "product_id": "168446377", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "product_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "promotion_gift_name": "", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 600mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+600mbps fibra","promotion_price_name": "promo colectivos + promo 50% one ilimitada avanzada 600mb","promotion_gift_name": "","product_id": "168446377","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}]
@@ -19,7 +19,7 @@
         <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
           <span class="ws10-u-heading--4">
               Fibra + Móvil
-              <strong>50% dto. 3 meses +<br>después 15% dto. 2 años</strong>
+              <strong>50% dto. 3 meses + después 15% dto. 2 años</strong>
           </span>
           <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
               Fibra y datos para ser ilimitable
@@ -1321,4 +1321,4 @@
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=aca2fc4bd6b65a77c59af43b890e04c1"></script>
+<script src="js/main.js?v=9df07b420e786f7006563fe2d8f63150"></script>
