analitica padres mayores y norte
Signed-off-by: allwars <Klaus008.LL>

--- a/Norte/ilimitada_avanzada_600/index.html
+++ b/Norte/ilimitada_avanzada_600/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=8949854bd2669178764462a1ec3fe36e" rel="stylesheet">
-<link href="css/styles.css?v=16ec8f3b9578ec26ee86f5b38b421a80" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=9d4ac2d56672bcce997600a33a5ce8b8" rel="stylesheet">
+<link href="css/styles.css?v=7800664df8f1e89d660a893e9a7fdf6a" rel="stylesheet" data-ws10-microcss="">
 <script>
 utag_data.default_plan = "vodafone one ilimitada avanzada 600Mbps"
 utag_data.plans_add2cart = [
@@ -136,13 +136,13 @@ utag_data.plans_add2cart = [
                       </legend>
                       <div class="ws10-c-card-rate__w-form-select">
                         <div class="vf-form__box ws10-c-form__box" data-analytics-category="cta" data-analytics-id="-6727639503211">
-                          <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio" data-analytics-element="modulo superior tarifa" data-analytics-context="portabilidad" data-analytics-category="cta" checked="">
+                          <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio" data-analytics-element="cardrate" data-analytics-context="portabilidad" data-analytics-category="cta" checked="">
                           <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine">
                             Portabilidad
                           </label>
                         </div>
                         <div class="vf-form__box s10-c-form__box" data-analytics-category="cta" data-analytics-element="modulo superior ilimitada maxi" data-analytics-context="alta nueva" data-analytics-id="-6727909503211">
-                          <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio" data-analytics-element="modulo superior tarifa" data-analytics-context="alta nueva" data-analytics-category="cta">
+                          <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio" data-analytics-element="cardrate" data-analytics-context="alta nueva" data-analytics-category="cta">
                           <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine" data-js-vf-value="newNumber">Nuevo Número</label>
                         </div>
                       </div>
@@ -165,7 +165,7 @@ utag_data.plans_add2cart = [
                             </p>
                           </div>
                         </div>
-                        <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])" class="ws10-c-button ws10-c-button--auto" data-analytics-context="lo quiero" data-analytics-element="modulo superior tarifa" data-analytics-category="cta" data-analytics-id="-4725875160583">
+                        <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])" class="ws10-c-button ws10-c-button--auto" data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-4725875160583">
                           Lo quiero
                         </a>
                       </div>
@@ -186,7 +186,7 @@ utag_data.plans_add2cart = [
                             </p>
                           </div>
                         </div>
-                        <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto" data-analytics-element="modulo superior tarifa" data-analytics-context="lo quiero" data-analytics-category="cta" data-analytics-id="-4545656976521" onmousedown="addtocart(utag_data.plans_add2cart[1])">
+                        <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto" data-analytics-element="cardrate" data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-category="cta" data-analytics-id="-4545656976521" onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
                           Lo quiero
                         </a>
@@ -346,7 +346,7 @@ utag_data.plans_add2cart = [
               </li>
             </ul>
             <p class="ws10-c-logo-list__w-show-all">
-              <a class="ws10-c-logo-list__show-all vfms-link" data-backdrop="TvUniversal600" data-backdrop-close="" aria-haspopup="dialog" data-analytics-context="modulo inferior tv" data-analytics-element="ver todos los canales incluidos" data-analytics-category="cta" data-analytics-id="-0003391249299">
+              <a class="ws10-c-logo-list__show-all vfms-link" data-backdrop="TvUniversal600" data-backdrop-close="" aria-haspopup="dialog" data-analytics-context="modulo inferior tv" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-0003391249299">
                 Ver todos los canales incluidos
               </a>
             </p>
@@ -680,7 +680,7 @@ utag_data.plans_add2cart = [
             activo en el servicio durante, al menos, 1 año desde la fecha de
             instalación.</p>
 
-          <a class="ws10-c-link-chevron ws10-c-link-chevron--primary" target="_blank" href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/n/" data-analytics-element="modulo inferior" data-analytics-context="condiciones legales" data-analytics-category="cta" data-analytics-id="-5460257368589">
+          <a class="ws10-c-link-chevron ws10-c-link-chevron--primary" target="_blank" href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/n/" data-analytics-element="cardaddons" data-analytics-context="condiciones legales" data-analytics-category="cta" data-analytics-id="-5460257368589">
             Ver condiciones legales
             <span class="ws10-u--hidden-visually"> color #E60000</span>
             <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -762,7 +762,7 @@ utag_data.plans_add2cart = [
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
-          <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])" class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior" data-analytics-context="lo quiero" data-analytics-category="cta" data-analytics-id="-4725875160585">
+          <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&amp;tcli=0&amp;tta=1" type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])" class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior" data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-category="cta" data-analytics-id="-4725875160585">
             Lo quiero
           </a>
         </div>
@@ -774,7 +774,7 @@ utag_data.plans_add2cart = [
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
-          <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&amp;tcli=0&amp;tta=1 " type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior" data-analytics-context="lo quiero" data-analytics-category="cta" data-analytics-id="-4545656976523" onmousedown="addtocart(utag_data.plans_add2cart[1])">
+          <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&amp;tcli=0&amp;tta=1 " type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior" data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-category="cta" data-analytics-id="-4545656976523" onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
             Lo quiero
           </a>
@@ -1224,4 +1224,4 @@ utag_data.plans_add2cart = [
 
 </div>
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=d0f1943fde89e971e5abd993de3308c8"></script>
+<script src="js/main.js?v=39bf71481c0590ed91f19c86f0f27692"></script>
