--- a/padres-mayores/cabecera/index.html
+++ b/padres-mayores/cabecera/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css" rel="stylesheet"  />
-<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
+<link href="css/ws10.css?v=5c673f83e7979c2d751954ceeee2d711" rel="stylesheet">
+<link href="css/styles.css?v=72a0ff306a65b1cfef1916a6278233b8" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content" id="cabecera" style="visibility: hidden;opacity: 0">
 	<div class="vfms-banner--bg ws10-u--pt12x@desktop ws10-u--pt12x@tablet ws10-u--pt6x@mobile">  
 		<div class="ws10-o-wrapper">
@@ -11,11 +11,9 @@
 							<div class="ws10-o-layout__item ws10-u--1/3@desktop">
 								<article class="ws10-c-feature-hifi ws10-c-feature-hifi--bg-transparent-white">
 									<span class="ws10-c-feature-hifi__background vfms-banner--icon-container">
-										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon"
-											xmlns='http://www.w3.org/2000/svg'
-											xmlns:xlink='http://www.w3.org/1999/xlink'>
+										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 											<title>Teléfono fijo</title>
-											<use class="icon-v3" xlink:href='#icon-unified-communication-mid'></use>
+											<use class="icon-v3" xlink:href="#icon-unified-communication-mid"></use>
 										</svg>
 									</span>
 									<p class="ws10-c-feature-hifi__text">
@@ -26,11 +24,9 @@
 							<div class="ws10-o-layout__item ws10-u--1/3@desktop">
 								 <article class="ws10-c-feature-hifi ws10-c-feature-hifi--bg-transparent-white">
 									<span class="ws10-c-feature-hifi__background vfms-banner--icon-container">
-										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon"
-											xmlns='http://www.w3.org/2000/svg'
-											xmlns:xlink='http://www.w3.org/1999/xlink'>
+										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 											<title>Teléfono móvil</title>
-											<use class="icon-v3" xlink:href='#icon-mobile-mid'></use>
+											<use class="icon-v3" xlink:href="#icon-mobile-mid"></use>
 										</svg>
 									</span>
 									<p class="ws10-c-feature-hifi__text">
@@ -41,11 +37,9 @@
 							<div class="ws10-o-layout__item ws10-u--1/3@desktop">
 								 <article class="ws10-c-feature-hifi ws10-c-feature-hifi--bg-transparent-white">
 									<span class="ws10-c-feature-hifi__background vfms-banner--icon-container">
-										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon"
-											xmlns='http://www.w3.org/2000/svg'
-											xmlns:xlink='http://www.w3.org/1999/xlink'>
+										<svg class="ws10-c-feature-hifi__icon vfms-banner--icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 											<title>GPS y tarifa móvil</title>
-											<use class="icon-v3" xlink:href='#icon-find-and-ring-your-device-mid'></use>
+											<use class="icon-v3" xlink:href="#icon-find-and-ring-your-device-mid"></use>
 										</svg>
 									</span>
 									<p class="ws10-c-feature-hifi__text">
@@ -61,6 +55,6 @@
 			</div>
 		</div>
 	</div>
-</div>
-<script src="js/ws10.js"></script>
-<script src="js/main.js"></script>
+
+<script src="js/ws10.js?v=fafeed6bb63109c2c88b9d392684cae4"></script>
+<script src="js/main.js?v=05c21dd031f770deb1574c1ce6ac204d"></script>
