--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -59,7 +59,10 @@
 		</div>
 		<div class="ws10-o-wrapper">
 			<!-- Filters -->
-			<section class="vf-cards-tv ws10-u--pt8x ws10-u--pb8x">
+			<!--
+			<section class="ws10-c-tabs-filter ws10-o-tabs" data-ws10-js="tabs-filter">
+			-->
+			<section class="ws10-u--pt4x ws10-u--pb4x">
 			    <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
 			        <span class="ws10-c-filter">
 			            <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
@@ -72,7 +75,7 @@
 			    </div>
 			</section>
 			<!-- Section Cards TV -->
-			<section class="vf-cards-tv ws10-u--pt8x ws10-u--pb8x">
+			<section class="vf-cards-tv ws10-u--pt4x ws10-u--pb4x">
 			    <div class="ws10-o-layout ws10-flex__align-items--end">
 			        <div class="ws10-o-layout__item ws10-u--1/3">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--deportes">
@@ -321,7 +324,7 @@
 			    </div>
 			</section>
 			<!-- Section Timeline -->
-			<section class="vf-timeline ws10-u--pt12x ws10-c-timeline-steps--dark">
+			<section class="vf-timeline ws10-u--pt4x ws10-u--pb4x ws10-c-timeline-steps--dark">
 			    <h3 class="ws10-u-heading--4">
 			        <strong>¿Cómo disfruto de esta oferta?</strong>
 			    </h3>
