--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -42,7 +42,7 @@
 			            <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
 			            <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1"> Clientes de móvil, solo fibra o móvil + fibra </label>
 			        </span>
-			        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x vf-filter-two" data-js-vf="_filter">
+			        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two" data-js-vf="_filter">
 			            <input type="checkbox" class="ws10-c-filter__input" id="idFilter2" name="nameInput" value="value" />
 			            <label class="ws10-c-filter__label ws10-c-filter__label--grey" for="idFilter2"> Y si tu tarifa es familiar… </label>
 			        </span>
@@ -51,7 +51,7 @@
 			<!-- Section Cards TV -->
 			<section class="vf-cards-tv ws10-u--pt4x ws10-u--pb4x">
 			    <div class="ws10-o-layout ws10-flex__align-items--end">
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="all">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="all">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--deportes">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -114,7 +114,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="family">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="family">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--documentales">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -177,7 +177,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="family">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="family">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--peques">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -240,7 +240,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -283,7 +283,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="all">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="all">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -326,7 +326,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="all">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="all">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--caza-pesca">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
@@ -368,7 +368,7 @@
 			                </div>
 			            </div>
 			        </div>
-			        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="all">
+			        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="all">
 			            <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--musica">
 			                <div class="ws10-c-card-pack-tv__header">
 			                    <picture class="ws10-c-card-pack-tv">
