--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -773,9 +773,7 @@
 		  </div>
 		</section>		<!-- Section Timeline -->
 		<section class="vf-timeline ws10-u--pt4x ws10-u--pb4x ws10-c-timeline-steps--dark">
-		    <h4>
-		        <strong>¿Cómo disfruto de esta oferta?</strong>
-		    </h4>
+		    <h3>¿Cómo disfruto de esta oferta?</h3>
 		    <ul class="ws10-c-timeline-steps">
 		            <li class="ws10-c-timeline-steps__item">
 		                <img class="ws10-c-lazy-load ws10-c-lazy-load--skeleton-light ws10-c-timeline-steps__icon"
