pelenaca: wip v-home iot

--- a/v-home/index.html
+++ b/v-home/index.html
@@ -485,18 +485,18 @@
                             <picture class="ws10-c-cards-discovery-standard__image-holder vf-card--image-height">
                                 <source srcset="img/iot/automation-kit.webp" type="image/webp">
                                 <source srcset="img/iot/automation-kit.jpg" type="image/jpg">
-                                <img src="img/iot/automation-kit.jpg" alt="V-Home Automation Kit" class="ws10-c-cards-discovery-standard__image vf-card--image">
+                                <img src="img/iot/automation-kit.jpg" alt="Domótica" class="ws10-c-cards-discovery-standard__image vf-card--image">
                             </picture>
                             <h3 class="ws10-c-cards-discovery-standard__title">
-                                V-Home Automation Kit
+                                Domótica
                             </h3>
                             <p class="ws10-c-cards-discovery-standard__text">
-                                Podrás configurar que las luces de tu casa se enciendan automáticamente si se detecta movimiento, aunque no estés cerca.
+                                Saca el máximo rendimiento a V-Home con la gama de dispositivos inteligentes : Bombillas, termostatos, enchufes, sensores…
                             </p>
                             <div class="ws10-c-cards-discovery-standard__content-bottom ws10-flex__direction--row ws10-flex__justify--start">
                                 <a class="ws10-c-cards-discovery-standard__content-item ws10-c-link-chevron ws10-c-link-chevron--primary ws10-c-cards-discovery-standard__content-item"
-                                    href="https://eshop.v.vodafone.com/es/v-home-by-vodafone-automation-kit" data-analytics-category="cta" data-analytics-element="vhome automation kit" data-analytics-context="mas info" data-analytics-id="1500108890064-8378296782069">
-                                    Más info <span class="ws10-u--hidden-visually"> sobre V-Home Automation Kit</span>
+                                    href="https://eshop.v.vodafone.com/es/smart-home" data-analytics-category="cta" data-analytics-element="vhome automation kit" data-analytics-context="mas info" data-analytics-id="1500108890064-8378296782069">
+                                    Más info <span class="ws10-u--hidden-visually"> sobre Domótica</span>
                                     <svg class="ws10-c-link-chevron__icon" xmlns='http://www.w3.org/2000/svg'
                                         xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
                                         <title>Flecha derecha</title>
