--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -1,6 +1,6 @@
 <div class="vfes-ms-content ws10-u-color--white ws10-u-color--bg-midnight" id="summerdelight" style="visibility: hidden;opacity: 0">
-	<link href="css/ws10.css?v=06dbdc9070c90b4df913412f04c3ed49" rel="stylesheet">
-	<link href="css/styles.css?v=3e8b7b745d46ae2ee61c6721532dc15c" rel="stylesheet" data-ws10-microcss="">
+	<link href="css/ws10.css?v=d259f62e6c2b02f69d8911b66f70b8fe" rel="stylesheet">
+	<link href="css/styles.css?v=f733d3fc39866b9b7cb6b8da25e1c83d" rel="stylesheet" data-ws10-microcss="">
 
 	<!-- Section Hero -->
 	<div class="ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
@@ -397,7 +397,7 @@
 		<!-- Faqs -->
 		<!-- FAQS-->
 		<div class="vfms-faqs vfes-layout__item vfes-pt- vfes-color-bg-vodafone-white ws10-u--pb12x">
-		  <div class="vfes-layout__wrapper vfes-pb+">
+		  <div>
 		    <h3 class="vfes-title vfes-title--3 vfes-pt+ vfes-pt-mov vfes-align--center">Preguntas frecuentes</h3>
 		    <div class="vfes-mt0-mov">
 		
@@ -487,4 +487,4 @@
 	</section></div>
 
 <script src="js/ws10.js?v=dbff13dca7ab099c36cbfa6fcbe3a554"></script>
-<script src="js/main.js?v=cb42db11fbbc05a56cce08c55fd21fe0"></script>
+<script src="js/main.js?v=e6ba37c7145a34861104b5927c4ea1cb"></script>
