--- a/summerdelight/index.html
+++ b/summerdelight/index.html
@@ -1,6 +1,6 @@
 <div class="vfes-ms-content ws10-u-color--white ws10-u-color--bg-midnight" id="summerdelight" style="visibility: hidden;opacity: 0">
-	<link href="css/ws10.css?v=d259f62e6c2b02f69d8911b66f70b8fe" rel="stylesheet">
-	<link href="css/styles.css?v=f733d3fc39866b9b7cb6b8da25e1c83d" rel="stylesheet" data-ws10-microcss="">
+	<link href="css/ws10.css?v=51e01d8eba989b8b9946e85d5e5b3c4c" rel="stylesheet">
+	<link href="css/styles.css?v=d6929ae07c7399e3f0e5c30470cae1f2" rel="stylesheet" data-ws10-microcss="">
 
 	<!-- Section Hero -->
 	<div class="ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
@@ -87,7 +87,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Pack Deportes" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack deportes" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -138,7 +138,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Pack Documentales" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack documentales" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -189,7 +189,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Pack Peques" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack peques" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -228,7 +228,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Acorn TV" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack acorntv" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -267,7 +267,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Planet Horror" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack horror" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -305,7 +305,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Pack Caza" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack caza" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -350,7 +350,7 @@
 		                <span class="ws10-c-price__currency"></span>
 		                <sub class="ws10-c-price__recurrence"></sub>
 		              </span>
-		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="Pack Música" data-analytics-id="-9332803914459">
+		              <a class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small" href="https://m.vodafone.es/web-camp-ver-2021" data-analytics-category="cta" data-analytics-element="listado packs tv" data-analytics-context="activar en mi vodafone:pack musica" data-analytics-id="-9332803914459">
 		                Activar en Mi Vodafone
 		                <span class="ws10-u--hidden-visually"> color #EB9700</span>
 		                <svg class="ws10-c-link-chevron__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
@@ -363,7 +363,8 @@
 		        </div>
 		      </div>
 		  </div>
-		</section>		<!-- Section Timeline -->
+		</section>
+		<!-- Section Timeline -->
 		<section class="vf-timeline ws10-u--pt4x ws10-u--pb4x ws10-c-timeline-steps--dark">
 		    <h3>¿Cómo disfruto de esta oferta?</h3>
 		    <ul class="ws10-c-timeline-steps">
@@ -395,68 +396,8 @@
 		    </ul>
 		</section>
 		<!-- Faqs -->
-		<!-- FAQS-->
-		<div class="vfms-faqs vfes-layout__item vfes-pt- vfes-color-bg-vodafone-white ws10-u--pb12x">
-		  <div>
-		    <h3 class="vfes-title vfes-title--3 vfes-pt+ vfes-pt-mov vfes-align--center">Preguntas frecuentes</h3>
-		    <div class="vfes-mt0-mov">
-		
-		      <div data-vfes-js="_accordion" class="vfes-accordion js-accordion">
-		        <div class="vfes-layout__item">
-		
-		            <section class="ws10-c-accordion ws10-c-accordion--dark ws10-u--mb3x" data-ws10-js="accordion">
-		              <div class="ws10-c-accordion__item ws10-o-collapse">
-		                <a class="ws10-c-accordion__header" href="#item1" data-ws10-collapse="linked-accordion">
-		                  <h3 class="ws10-c-accordion__title">¿En qué consiste la promoción y qué fechas tiene?</h3>
-		                </a>
-		                <div class="ws10-o-collapse__panel" id="item1" hidden="">
-		                  <div class="ws10-c-accordion__content">
-		                    <p>Este verano por ser cliente de Vodafone puedes llevarte un Pack de Vodafone TV gratis que te mostramos y que podrás disfrutar hasta el 15 de septiembre, y que podrás contratar entre el 21 de junio y el 31 de julio a través de Mi Vodafone en los enlaces que te facilitamos en la página.</p>
-		                  </div>
-		                </div>
-		              </div>
-		            </section>
-		            <section class="ws10-c-accordion ws10-c-accordion--dark ws10-u--mb3x" data-ws10-js="accordion">
-		              <div class="ws10-c-accordion__item ws10-o-collapse">
-		                <a class="ws10-c-accordion__header" href="#item2" data-ws10-collapse="linked-accordion">
-		                  <h3 class="ws10-c-accordion__title">¿Cuánto tiempo puedo disfrutar de esta promoción?</h3>
-		                </a>
-		                <div class="ws10-o-collapse__panel" id="item2" hidden="">
-		                  <div class="ws10-c-accordion__content">
-		                    <p>Podrás disfrutar de esta promoción gratis hasta el 15 de septiembre que se desactivará automáticamente sin ningún coste adicional para ti. Si deseas seguir disfrutando de tu pack podrás hacerlo contratándolo a través de Mi Vodafone.</p>
-		                  </div>
-		                </div>
-		              </div>
-		            </section>
-		
-		          <section class="ws10-c-accordion ws10-c-accordion--dark ws10-u--mb3x" data-ws10-js="accordion">
-		            <div class="ws10-c-accordion__item ws10-o-collapse">
-		              <a class="ws10-c-accordion__header" href="#item3" data-ws10-collapse="linked-accordion">
-		                <h3 class="ws10-c-accordion__title">¿Tengo que hacer algo para disfrutar de los servicios de streaming incluidos sin coste en mi pack? (Eurosport Player, TIDAL)</h3>
-		              </a>
-		              <div class="ws10-o-collapse__panel" id="item3" hidden="">
-		                <div class="ws10-c-accordion__content">
-		                  <p>
-		                      Una vez tengas activado tu Pack de Vodafone TV podrás activar Eurosport Player y/o TIDAL en
-		                      <a href="http://vodafone.es/entretenimiento" title="Activar Pack de Vodafone TV" target="_blank">
-		                          vodafone.es/entretenimiento
-		                      </a>.
-		                      Una vez termine la promoción dejarás de tener disponibles estos servicios de manera automática
-		                      y sin coste adicional al igual que el pack de Vodafone TV.
-		                  </p>
-		                </div>
-		              </div>
-		            </div>
-		          </section>
-		
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-		
-		</div>
 		<!-- Link Legales -->
-		<section class="ws10-u--pb4x ws10-align--right">
+		<section class="ws10-u--pt4x ws10-u--pb4x ws10-align--right">
 		    <a class="ws10-c-link-chevron ws10-c-link-chevron--white" target="_blank" href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/promocion-verano-vodafone-clientes/legales/" data-analytics-element="card addons" data-analytics-context="condiciones legales" data-analytics-category="cta" data-analytics-id="-5460257368589">
 		      Ver condiciones legales
 		      <span class="ws10-u--hidden-visually"> color #E60000</span>
@@ -487,4 +428,4 @@
 	</section></div>
 
 <script src="js/ws10.js?v=dbff13dca7ab099c36cbfa6fcbe3a554"></script>
-<script src="js/main.js?v=e6ba37c7145a34861104b5927c4ea1cb"></script>
+<script src="js/main.js?v=7866757a90920a355d4cb8b64c7cdb8b"></script>
